# AgenticMootCourt

./: .gitignore  100LandmarkCasesNew.docx  150_lawergpt_dataset_qna_v1_train.jsonl  README.md  constitution_evaluation_results.csv  crpc_evaluation_results.csv  ipc_evaluation_results.csv  moot_court_evaluation.md  moot_court_prosecution.md  pyproject.toml  report.md  requirements.txt  review_feedback.md
EvalutionDataset/: indian_constitution.csv  ipc_sections.csv  test.json
EvalutionDatasetTEST/: 150_lawergpt_dataset_qna_v1_train.jsonl  Articles_Constitution_3300_Instruction_Set.jsonl  constitution_qa.json  crpc_qa.json  indian_constitution.csv  ipc_qa.json  ipc_sections.csv
EvalutionDatasetTEST2/: Articles_Constitution_3300_Instruction_Set.jsonl  indian_constitution.csv  ipc_qa.json
Raw_data/: 100LandmarkCases.docx
Results/: ArticlesConstitution_incremental_results.csv  IPC_incremental_filtered_results.csv  IPC_incremental_results.csv  IndianConstitution_filtered_results.csv  IndianConstitution_incremental_results.csv  Processing2.ipynb  ResultProcessing.ipynb  ResultProcessing3.ipynb  Results.md  all_new_datasets_evaluation_results.csv  articles_constitution_evaluation_results.csv  constitution_evaluation_results.csv  crpc_evaluation_results.csv  evaluation_summaries.txt  indian_constitution_evaluation_results.csv  ipc_all_evaluation_results.csv  ipc_description_evaluation_results.csv  ipc_evaluation_results.csv  ipc_offense_evaluation_results.csv  ipc_punishment_evaluation_results.csv  lawyer_gpt_evaluation_results.csv
ResultsCOT/: evaluation_summaries.txt  (+1 more)
(+87 files in other folders)
