[project]
name = "mootcourt"
version = "0.1.0"
description = "mootcourt using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "langchain>=0.3.19",
    "langchain-community>=0.3.17",
    "langchain-google-genai>=2.0.9",
]

[project.scripts]
mootcourt = "mootcourt.main:run"
run_crew = "mootcourt.main:run"
train = "mootcourt.main:train"
replay = "mootcourt.main:replay"
test = "mootcourt.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
